--- a/www/login.css
+++ b/www/login.css
@@ -141,3 +141,9 @@ button {
 .register p a:hover {
     text-decoration: underline;
 }
+
+#fotoPerfil {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
