--- a/www/css/verProducto.css
+++ b/www/css/verProducto.css
@@ -58,7 +58,7 @@
 
 .avatarEmpresa img {
     border-radius: 50%;
-    object-fit: contain;
+    object-fit: cover;
     width: 55px;
     height: 55px;
     margin-right: 5px;
