--- a/www/css/verEmpresa.css
+++ b/www/css/verEmpresa.css
@@ -4,46 +4,32 @@
     box-sizing: border-box;
 }
 
-
-.contenedor {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+main {
     margin: 1rem 0;
-    gap: 20px;
 }
-
 
 .datosEmpresa {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    width: 70%;
     border: 1px solid lightgrey;
     box-shadow: 7px 6px 5px lightgrey;
     border-radius: 10px;
-
+    gap: 10px;
+    padding: 10px;
+    flex-direction: column;
 }
 
-.datosMovil,
-.datosMovil p {
-    display: none;
-}
-
-.datosPc,
-.datosMovil {
+.datosPc {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.datosMovil p,
 .datosPc p {
     padding: 1rem;
     font-size: larger;
-    margin-right: 3rem;
 }
 
 .logoEmp img {
@@ -54,7 +40,6 @@
 }
 
 .mapa {
-    width: 70%;
     display: flex;
     flex-direction: column;
     gap: 5px;
@@ -63,32 +48,42 @@
 }
 
 #map {
-    width: 100%;
-    height: 500px;
+    width: 400px;
+    height: 300px;
     border: 1px solid lightgrey;
     box-shadow: 7px 6px 5px lightgrey;
     border-radius: 10px;
 }
 
 
-@media (max-width: 1025px) {
-    .datosPc p {
-        padding: 1rem;
-        font-size: medium;
-        margin-right: 1rem;
+
+@media (min-width: 600px) {
+    .datosEmpresa{
+        margin: 0px 100px;
     }
 
-    .datosPc {
-        width: 100%;
-        align-self: center;
+    #map{
+        width: 500px;
+        height: 400px;
+    }
+}
+
+@media (min-width: 900px) {
+    .datosEmpresa {
+        flex-direction: row;
+        margin: 0px 100px;
     }
 
     #map {
-        width: 100%;
-        height: 300px;
+        width: 950px;
+        height: 700px;
         border: 1px solid lightgrey;
         box-shadow: 7px 6px 5px lightgrey;
         border-radius: 10px;
+    }
+
+    .productos {
+        margin: 0 50px;
     }
 
     .logoEmp {
@@ -97,40 +92,5 @@
 
     .logoEmp img {
         padding: 1em;
-    }
-}
-
-@media (max-width: 880px) {
-
-    .datosPc p,
-    .datosPc {
-        display: none;
-    }
-
-    .datosMovil,
-    .datosMovil p {
-        display: flex;
-        font-size: smaller;
-    }
-
-    #map {
-        width: 100%;
-        height: 200px;
-        border: 1px solid lightgrey;
-        box-shadow: 7px 6px 5px lightgrey;
-        border-radius: 10px;
-    }
-
-    .logoEmp {
-        width: 40%;
-    }
-
-    .logoEmp img {
-        width: 150px;
-        height: 150px;
-    }
-
-    .datosEmpresa {
-        width: 85%;
     }
 }
