--- a/www/css/productos.css
+++ b/www/css/productos.css
@@ -1,9 +1,10 @@
-main{
-    padding: 1em 0;
-}
-
 .bloque {
     display: none;
+}
+
+.pagina{
+    padding: 1rem 0;
+
 }
 
 
@@ -11,7 +12,6 @@ main{
     .pagina {
         width: 100%;
         height: 100%;
-        padding: 1rem;
     }
 
     .elementos {
@@ -72,7 +72,8 @@ main{
         position: relative;
         border: 1px solid lightgray;
         background-color: #D4E4F6;
-        border-radius: 10px;
+        border-radius: 15px;
+        height:fit-content;
     }
 
     .categorias {
