--- a/www/css/registro.css
+++ b/www/css/registro.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     font-family: 'poppins', sans-serif;
-
 }
 
 .cancelar {
@@ -18,8 +17,10 @@
 
 .imagen {
     display: flex;
+    padding: 0 1rem;
     align-items: center;
     justify-content: center;
+    border-right: 2px dashed #0a3093;
 }
 
 .bg {
@@ -42,7 +43,22 @@
     animation-duration: 5s;
 }
 
+@keyframes slide {
+    0% {
+        transform: translateX(-25%);
+    }
+
+    100% {
+        transform: translateX(25%);
+    }
+}
+
 .content {
+    display: flex; 
+    justify-content: space-around;  
+    padding: 1rem;
+    background-color: white;
+    border-radius: 30px;
     box-sizing: border-box;
     left: 50%;
     position: fixed;
@@ -51,27 +67,23 @@
     transform: translate(-50%, -50%);
 }
 
-
-
 .form-box {
-    padding: 1rem;
-    width: 500px;
+    padding: 0 1rem;
     background: white;
-    border-radius: 30px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.iniciar p {
-    color: black;
+#tipo{
+    font-size: 16px;
 }
 
 .inputbox {
     position: relative;
-    margin: 15px 0;
-    width: 300px;
+    margin: 10px 0;
+    width: 400px;
     border-bottom: 2px solid black;
 }
 
@@ -81,7 +93,6 @@
     left: 5px;
     transform: translateY(-50%);
     color: black;
-    font-size: 1em;
     pointer-events: none;
     transition: .2s;
 }
@@ -89,11 +100,12 @@
 input:focus~label,
 input:valid~label {
     top: -5px;
+    opacity: 0;
 }
 
 .inputbox input {
     width: 100%;
-    height: 35px;
+    height: 25px;
     background: transparent;
     border: none;
     outline: none;
@@ -110,18 +122,6 @@ canvas {
 h1 {
     font-family: monospace;
 }
-
-@keyframes slide {
-    0% {
-        transform: translateX(-25%);
-    }
-
-    100% {
-        transform: translateX(25%);
-    }
-}
-
-
 
 button {
     width: 100%;
@@ -140,16 +140,17 @@ button {
     font-size: .9em;
     color: white;
     text-align: center;
-    margin: 25px 0 10px;
+    margin: 15px 0;
+}
 
+.iniciar p {
+    color: black;
 }
 
 .iniciar p a {
     text-decoration: none;
     color: black;
     font-weight: 600;
-    padding: 1em;
-
 }
 
 .iniciar p a:hover {
