--- a/www/css/perfilUsuario.css
+++ b/www/css/perfilUsuario.css
@@ -1,85 +1,165 @@
-.bloque {
-    display: none;
+form {
+    display: block;
+    width: 100%;
+    margin-top: 0;
 }
 
-main{
+main {
     padding: 0;
 }
 
-@media (min-width: 900px) {
-    .pagina {
-        width: 100%;
-        height: 100%;
+.pagina {
+    width: 100%;
+    height: 100%;
+}
+
+.elementos {
+    display: grid;
+    grid-template-columns: 90px auto;
+}
+
+.contenido {
+    height: 100vh;
+    background-color: rgba(211, 211, 211, 0.411);
+}
+
+.bloque {
+    display: block;
+    height: 100%;
+    width: 100%;
+    border-right: 1px solid lightgray;
+}
+
+.enlaces {
+    background-color: white;
+    padding: 1rem;
+    margin: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    height: 100%;
+}
+
+.enlaces p {
+    display: none;
+}
+
+.enlaces>* {
+    display: flex;
+    align-items: center;
+}
+
+.enlaces:hover {
+    background-color: lightgray;
+    border-radius: 10px;
+}
+
+.cliente img {
+    object-fit: cover;
+    border-radius: 50%;
+    width: 32px;
+    height: 32px;
+    margin: 0;
+
+
+}
+
+svg {
+    margin-right: 10px;
+}
+
+.contenedor {
+    padding: 15px 15px;
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 1140px;
+
+}
+
+.caja {
+    background-color: #fff;
+    border-radius: 10px;
+    border: solid 1px #ECEFF1;
+    margin-bottom: 20px;
+    padding: 1rem;
+    box-shadow: 7px 9px 16px 0px rgba(0, 0, 0, 0.2);
+}
+
+.cajaUsuario {
+    padding: 1rem;
+}
+
+.fila {
+    display: flex;
+    flex-direction: column;
+    margin-right: -15px;
+    margin-left: -15px;
+}
+
+.datos img {
+    object-fit: cover;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    margin-right: 10px;
+}
+
+.datos {
+    gap: 50px;
+    align-items: center;
+    margin-bottom: 2rem;
+}
+
+.datos .input {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.datos label {
+    width: 45%;
+    text-align: right;
+}
+
+.datos input,
+.cambiarFoto {
+    background-color: white;
+    display: block;
+    border: 1px solid lightgray;
+    height: 50px;
+    width: 100%;
+    font-size: 1rem;
+    border-radius: 10px;
+    padding: 0.375rem 0.75rem;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.2);
+}
+
+.datos input:focus,
+input:hover {
+    outline: 2px solid #0A3093;
+}
+
+.cambiarFoto {
+    cursor: pointer;
+}
+
+@media (min-width: 769px) {
+    .cliente img {
+        margin-right: 5px;
+    }
+
+    .enlaces p {
+        display: block;
     }
 
     .elementos {
         display: grid;
-        grid-gap: 20px;
-        grid-template-columns: 220px calc(100% - 240px);
+        grid-template-columns: 220px auto;
     }
 
-    .contenido{
-        background-color: lightgray;
-    }
-
-    form {
-        margin: 0;
+    .datos {
         display: flex;
-        flex-direction: column;
-        width: 100%;
-        margin: 10px 0;
-        height: 100vh;
-    }
 
-    .filtro {
-        background-color: white;
-        width: 100%;
-        padding: 1rem;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: center;
-        height: 100%;
-    }
-
-    .bloque {
-        display: block;
-        border-radius: 10px;
-        height: 100%;
-    }
-
-    .categorias {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .categorias>* {
-        display: flex;
-        margin: .5rem 0;
-    }
-
-    .categorias input {
-        margin-right: 5px;
-        width: 17px;
-        height: 17px;
-    }
-
-    .precio {
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-        width: 100%;
-    }
-
-    .precio input {
-        width: 55px;
-        padding: 0 10px;
-        height: 30px;
-        border-radius: 10px;
-        border: 0;
-    }
-
-    .precio input:hover{
-        border:2px solid black;
     }
 }
