--- a/www/css/perfilUsuario.css
+++ b/www/css/perfilUsuario.css
@@ -15,18 +15,20 @@ main {
 
 .elementos {
     display: grid;
-    grid-template-columns: 90px auto;
+    grid-template-columns: 95px auto;
 }
 
 .contenido {
-    height: 100vh;
     background-color: rgba(211, 211, 211, 0.411);
+}
+
+aside{
+    position: fixed;
+    width: 230px;
 }
 
 .bloque {
     display: block;
-    height: 100%;
-    width: 100%;
     border-right: 1px solid lightgray;
 }
 
@@ -55,14 +57,18 @@ main {
     border-radius: 10px;
 }
 
+.caja h3{
+    margin-bottom: 10px;
+    border-bottom: 1px solid lightgray;
+    font-size: 22px;
+}
+
 .cliente img {
     object-fit: cover;
     border-radius: 50%;
     width: 32px;
     height: 32px;
     margin: 0;
-
-
 }
 
 svg {
@@ -155,11 +161,10 @@ input:hover {
 
     .elementos {
         display: grid;
-        grid-template-columns: 220px auto;
+        grid-template-columns: 230px auto;
     }
 
     .datos {
         display: flex;
-
     }
 }
