animacion para el borde de input

--- a/www/css/perfilUsuario.css
+++ b/www/css/perfilUsuario.css
@@ -139,11 +139,13 @@ svg {
     border-radius: 10px;
     padding: 0.375rem 0.75rem;
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.2);
+    transition: border .2s ease-in-out;
 }
 
 .datos input:focus,
 input:hover {
-    outline: 2px solid #0A3093;
+    border: 1px solid #0A3093;
+    outline: 1px solid #0A3093;
 }
 
 .cambiarFoto {
