--- a/www/css/registro.css
+++ b/www/css/registro.css
@@ -136,6 +136,10 @@ button {
     font-weight: 600;
 }
 
+button:hover{
+    background-color: #051a4e;
+}
+
 .iniciar {
     font-size: .9em;
     color: white;
