--- a/www/css/perfilUsuario.css
+++ b/www/css/perfilUsuario.css
@@ -19,6 +19,7 @@ main {
 }
 
 .contenido {
+    min-height: 100vh;
     background-color: rgba(211, 211, 211, 0.411);
 }
 
@@ -84,7 +85,7 @@ svg {
     background-color: #fff;
     border-radius: 10px;
     border: solid 1px #ECEFF1;
-    margin-bottom: 20px;
+    margin: 20px 0px;
     padding: 1rem;
     box-shadow: 7px 9px 16px 0px rgba(0, 0, 0, 0.2);
 }
@@ -148,25 +149,36 @@ input:hover {
 .cambiarFoto {
     cursor: pointer;
 }
+.cajaCerrarSesion{
+    display: flex;
+    align-items: center;
+    justify-content: end;
+}
 
-.guardar {
+.guardar, .cerrarSesion {
     width: 100%;
     height: 40px;
     border-radius: 40px;
     background: #0a3093;
     border: none;
+    padding: 10px;
     outline: none;
     color: white;
     cursor: pointer;
     font-size: 1em;
     font-weight: 600;
 }
-
+.cerrarSesion{
+    width: auto;
+}
+.cerrarSesion:hover{
+    background: rgb(255, 70, 70) ;
+}
 .guardar:hover{
     background-color: #051a4e;
 }
 
-@media (min-width: 769px) {
+@media (min-width: 700px) {
 
     .productos {
         grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
@@ -180,7 +192,9 @@ input:hover {
     .productos a {
         height: 90%;
     }
-    
+    .caja{
+        margin: 20px;
+    }
     .enlaces:hover {
         background-color: lightgray;
         border-radius: 10px;
