--- a/www/css/indexEmpresa.css
+++ b/www/css/indexEmpresa.css
@@ -63,7 +63,7 @@ form {
 }
 
 .mapa {
-    background-color: rgb(0, 221, 255);
+    background: transparent;
     width: 90%;
     display: flex;
     justify-content: center;
