--- a/www/css/perfilUsuario.css
+++ b/www/css/perfilUsuario.css
@@ -149,13 +149,16 @@ input:hover {
 .cambiarFoto {
     cursor: pointer;
 }
-.cajaCerrarSesion{
+.imagen{
     display: flex;
     align-items: center;
-    justify-content: end;
+    justify-content: center;
+    flex-direction: column;
 }
-
-.guardar, .cerrarSesion {
+.imagen p{
+    color: gray;
+}
+.guardar{
     width: 100%;
     height: 40px;
     border-radius: 40px;
@@ -168,12 +171,7 @@ input:hover {
     font-size: 1em;
     font-weight: 600;
 }
-.cerrarSesion{
-    width: auto;
-}
-.cerrarSesion:hover{
-    background: rgb(255, 70, 70) ;
-}
+
 .guardar:hover{
     background-color: #051a4e;
 }
