--- a/www/css/perfilUsuario.css
+++ b/www/css/perfilUsuario.css
@@ -152,12 +152,20 @@ input:hover {
 .imagen{
     display: flex;
     align-items: center;
-    justify-content: center;
     flex-direction: column;
+    height: 100vh;
 }
+
 .imagen p{
     color: gray;
+    text-align: center;
+    font-size: 18px;
 }
+
+.imagen svg{
+    display: none;
+}
+
 .guardar{
     width: 100%;
     height: 40px;
@@ -177,6 +185,9 @@ input:hover {
 }
 
 @media (min-width: 700px) {
+    .imagen svg{
+        display: flex;
+    }
 
     .productos {
         grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
@@ -200,7 +211,7 @@ input:hover {
 
     aside {
         position: fixed;
-        width: 230px;
+        width: 200px;
     }
 
     .cliente img {
@@ -213,7 +224,7 @@ input:hover {
 
     .elementos {
         display: grid;
-        grid-template-columns: 230px auto;
+        grid-template-columns: 200px auto;
     }
 
     .datos {
