--- a/www/css/perfilUsuario.css
+++ b/www/css/perfilUsuario.css
@@ -159,7 +159,7 @@ input:hover {
 .imagen p{
     color: gray;
     text-align: center;
-    font-size: 18px;
+    font-weight: 600;
 }
 
 .imagen svg{
