--- a/www/css/verProducto.css
+++ b/www/css/verProducto.css
@@ -43,6 +43,7 @@ main {
     padding: 0 1rem;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
+    z-index: 2;
 }
 
 .avatarEmpresa {
@@ -242,31 +243,30 @@ main {
     display: flex;
     position: absolute;
     top: 50%;
-    font-size: 1.5rem;
-    background-color: transparent;
+    font-size: 1.9rem;
     border-radius: 100%;
     font-weight: 600;
     cursor: pointer;
-    color: #ffffff1f;
     transform: translate(0, -50%);
-    transition: .5s ease;
+    transition: .2s ease;
     user-select: none;
-    background-color: rgba(128, 128, 128, 0.264);
-    width: 5%;
-    height: 5%;
-    text-align: center;
+    width: auto;
+    height: auto;
 }
 
-.btn-left:hover,
-.btn-right:hover {
-    background-color: #3333336b;
-    color: #ffffff7b;
+.fa-2xl {
+    font-size: 1.2em;
+}
+
+.fa-2xl:hover {
+    scale: 1.3;
+    transition: scale .2s ease-in-out;
 }
 
 .btn-left {
-    left: 10px;
+    left: 30%;
 }
 
 .btn-right {
-    right: 10px;
+    right: 30%;
 }
