arreglo en likes de usuairo

--- a/www/css/verProducto.css
+++ b/www/css/verProducto.css
@@ -73,6 +73,70 @@ main {
     cursor: pointer;
 }
 
+.cajaProducto{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-carousel {
+    position: relative;
+    width: 600px;
+    height: 580px;
+    background: transparent;
+    border-radius: 15px;
+    overflow: hidden;
+
+}
+
+.carruseles {
+    width: 1000%;
+    height: 100%;
+    display: flex;
+
+}
+
+.slider-section {
+    width: calc(100% / 10);
+    height: 100%;
+}
+
+.slider-section img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 15px;
+}
+
+.btn-left,
+.btn-right {
+    display: flex;
+    top: 37px;
+    flex-direction: row;
+    cursor: pointer;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 100%;
+}
+
+.fa-2xl {
+    font-size: 50px;
+}
+
+.fa-2xl:hover {
+    scale: 1.3;
+    transition: scale .2s ease-in-out;
+}
+
+.btn-left {
+    left: 360px;
+}
+
+.btn-right {
+    right: 360px;
+}
+
 .producto img {
     object-fit: cover;
     width: 200px;
@@ -174,99 +238,4 @@ main {
         height: 550px;
     }
 
-}
-
-@keyframes reducir {
-    0% {
-        transform: scale(1);
-    }
-
-    100% {
-        transform: scale(0);
-    }
-}
-
-@keyframes aumentar {
-    0% {
-        transform: scale(0);
-    }
-
-    100% {
-        transform: scale(1);
-    }
-}
-
-.reducir {
-    animation-name: reducir;
-    animation-duration: .2s;
-    animation-timing-function: ease;
-}
-
-.aumentar {
-    animation-name: aumentar;
-    animation-duration: .2s;
-    animation-timing-function: ease;
-
-}
-
-.container-carousel {
-    position: relative;
-    width: 600px;
-    height: 580px;
-    background: transparent;
-    border-radius: 15px;
-    overflow: hidden;
-
-}
-
-.carruseles {
-    width: 1000%;
-    height: 100%;
-    display: flex;
-
-}
-
-.slider-section {
-    width: calc(100% / 10);
-    height: 100%;
-}
-
-.slider-section img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 15px;
-}
-
-.btn-left,
-.btn-right {
-    display: flex;
-    position: absolute;
-    top: 50%;
-    font-size: 1.9rem;
-    border-radius: 100%;
-    font-weight: 600;
-    cursor: pointer;
-    transform: translate(0, -50%);
-    transition: .2s ease;
-    user-select: none;
-    width: auto;
-    height: auto;
-}
-
-.fa-2xl {
-    font-size: 1.2em;
-}
-
-.fa-2xl:hover {
-    scale: 1.3;
-    transition: scale .2s ease-in-out;
-}
-
-.btn-left {
-    left: 30%;
-}
-
-.btn-right {
-    right: 30%;
 }
