--- a/www/css/verProducto.css
+++ b/www/css/verProducto.css
@@ -74,6 +74,7 @@ main {
 }
 
 .cajaProducto{
+    width: -webkit-fill-available;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -82,11 +83,10 @@ main {
 .container-carousel {
     position: relative;
     width: 600px;
-    height: 580px;
+    height: auto;
     background: transparent;
     border-radius: 15px;
     overflow: hidden;
-
 }
 
 .carruseles {
@@ -118,10 +118,11 @@ main {
     justify-content: center;
     width: 50px;
     height: 100%;
+    margin: 0 28px;
 }
 
 .fa-2xl {
-    font-size: 50px;
+    font-size: 30px;
 }
 
 .fa-2xl:hover {
@@ -174,6 +175,11 @@ main {
 
 /*TABLET Y ORDERNADOR*/
 @media (min-width: 600px) {
+
+    .fa-2xl {
+        font-size: 50px;
+    }
+
     .verProductoCaja {
         width: 550px;
     }
@@ -207,6 +213,10 @@ main {
 }
 
 @media (min-width: 900px) {
+    .container-carousel {
+        height: auto;
+    }
+
     .verProductoCaja {
         width: 900px;
     }
